@@ -33,6 +33,7 @@ sub LaTeX_ToUnicode_convert_hook {
 
   # these take arguments
   $string =~ s/\\acro$endcw//g;
+  $string =~ s,\\cs$endcw\{(.*?)\},<tt>&#x5c;$1</tt>,g;
   
   # no arguments
   $string =~ s/\\API$endcw/API/g;
@@ -48,7 +49,6 @@ sub LaTeX_ToUnicode_convert_hook {
   $string =~ s/\\XeTeX$endcw/XeTeX/g;
   #
   $string =~ s/\\break$endcw/ /g;
-  $string =~ s/\\cs$endcw/\\x{005c}/g;
   $string =~ s/\\dash$endcw/\\x{2013}/g; # en dash
   $string =~ s/\\epTeX$endcw/epTeX/g;
   $string =~ s/\\newline$endcw/ /g;
